// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rebalance 1`] = `
"
===
===
"
`;

exports[`rebalance 2`] = `
"
  m1: [1]
===
===
  m1: [1]
"
`;

exports[`rebalance 3`] = `
"
  m1: [1]
  m2: []
===
===
  m1: [1]
  m2: []
"
`;

exports[`rebalance 4`] = `
"
  m1: [1,2]
===
===
  m1: [1,2]
"
`;

exports[`rebalance 5`] = `
"
  m1: [1,2]
  m2: []
===
  2: m1->m2
===
  m1: [1]
  m2: [2]
"
`;

exports[`rebalance 6`] = `
"
  m1: [1,2]
  m2: [3]
===
===
  m1: [1,2]
  m2: [3]
"
`;

exports[`rebalance 7`] = `
"
  m1: [1]
  m2: [2,3]
===
  3: m2->m1
===
  m1: [1,3]
  m2: [2]
"
`;

exports[`rebalance 8`] = `
"
  m1: [1,2,3,4]
  m2: []
===
  3: m1->m2
  4: m1->m2
===
  m1: [1,2]
  m2: [3,4]
"
`;

exports[`rebalance 9`] = `
"
  m1: [1,2,3,4]
  m2: []
  m3: []
===
  2: m1->m2
  3: m1->m2
  4: m1->m3
===
  m1: [1]
  m2: [2,3]
  m3: [4]
"
`;

exports[`rebalance 10`] = `
"
  m1: [1,2,3]
  m2: []
  m3: []
  m4: []
===
  2: m1->m2
  3: m1->m4
===
  m1: [1]
  m2: [2]
  m3: []
  m4: [3]
"
`;

exports[`rebalance 11`] = `
"
  m1: [1,2,3]
  m2: []
  m3: []
  m4: []
  m5: []
===
  2: m1->m3
  3: m1->m5
===
  m1: [1]
  m2: []
  m3: [2]
  m4: []
  m5: [3]
"
`;
